--- a/install
+++ b/install
@@ -11,11 +11,16 @@ prefix='~/.fzf'
 prefix_expand=~/.fzf
 fish_dir=${XDG_CONFIG_HOME:-$HOME/.config}/fish
 
+cd "$(dirname "${BASH_SOURCE[0]}")"
+fzf_base=$(pwd)
+fzf_base_esc=$(printf %q "$fzf_base")
+
 help() {
   cat << EOF
 usage: $0 [OPTIONS]
 
     --help               Show this message
+    --version VERSION    Download the source files for the specified version
     --bin                Download fzf binary only; Do not generate ~/.fzf.{bash,zsh}
     --all                Download fzf binary and update configuration files
                          to enable key bindings and fuzzy completion
@@ -29,44 +34,6 @@ usage: $0 [OPTIONS]
     --no-fish            Do not set up fish configuration
 EOF
 }
-
-for opt in "$@"; do
-  case $opt in
-    --help)
-      help
-      exit 0
-      ;;
-    --all)
-      auto_completion=1
-      key_bindings=1
-      update_config=1
-      ;;
-    --xdg)
-      prefix='"${XDG_CONFIG_HOME:-$HOME/.config}"/fzf/fzf'
-      prefix_expand=${XDG_CONFIG_HOME:-$HOME/.config}/fzf/fzf
-      mkdir -p "${XDG_CONFIG_HOME:-$HOME/.config}/fzf"
-      ;;
-    --key-bindings)    key_bindings=1    ;;
-    --no-key-bindings) key_bindings=0    ;;
-    --completion)      auto_completion=1 ;;
-    --no-completion)   auto_completion=0 ;;
-    --update-rc)       update_config=1   ;;
-    --no-update-rc)    update_config=0   ;;
-    --bin)             ;;
-    --no-bash)         shells=${shells/bash/} ;;
-    --no-zsh)          shells=${shells/zsh/} ;;
-    --no-fish)         shells=${shells/fish/} ;;
-    *)
-      echo "unknown option: $opt"
-      help
-      exit 1
-      ;;
-  esac
-done
-
-cd "$(dirname "${BASH_SOURCE[0]}")"
-fzf_base=$(pwd)
-fzf_base_esc=$(printf %q "$fzf_base")
 
 ask() {
   while true; do
@@ -113,40 +80,42 @@ link_fzf_in_path() {
 }
 
 try_curl() {
-  command -v curl > /dev/null &&
-  if [[ $1 =~ tar.gz$ ]]; then
-    curl -fL $1 | tar -xzf -
-  else
-    local temp=${TMPDIR:-/tmp}/fzf.zip
-    curl -fLo "$temp" $1 && unzip -o "$temp" && rm -f "$temp"
-  fi
+  command -v curl > /dev/null && curl -fLO $1 
+  # if [[ $1 =~ tar.gz$ ]]; then
+    # curl -fL $1 | tar -xzf -
+  # else
+    # local temp=${TMPDIR:-/tmp}/fzf.zip
+    # curl -fLo "$temp" $1 && unzip -o "$temp" && rm -f "$temp"
+  # fi
 }
 
 try_wget() {
-  command -v wget > /dev/null &&
-  if [[ $1 =~ tar.gz$ ]]; then
-    wget -O - $1 | tar -xzf -
-  else
-    local temp=${TMPDIR:-/tmp}/fzf.zip
-    wget -O "$temp" $1 && unzip -o "$temp" && rm -f "$temp"
-  fi
+  command -v wget > /dev/null && wget -O - $1 
+  # if [[ $1 =~ tar.gz$ ]]; then
+    # wget -O - $1 | tar -xzf -
+  # else
+    # local temp=${TMPDIR:-/tmp}/fzf.zip
+    # wget -O "$temp" $1 && unzip -o "$temp" && rm -f "$temp"
+  # fi
 }
 
+# download file_to_download
 download() {
-  echo "Downloading bin/fzf ..."
-  if [ -x "$fzf_base"/bin/fzf ]; then
-    echo "  - Already exists"
-    check_binary && return
-  fi
-  link_fzf_in_path && return
-  mkdir -p "$fzf_base"/bin && cd "$fzf_base"/bin
+  file_to_download=${1}
+  # echo "Downloading bin/fzf ..."
+  # if [ -x "$fzf_base"/bin/fzf ]; then
+    # echo "  - Already exists"
+    # check_binary && return
+  # fi
+  # link_fzf_in_path && return
+  mkdir -p "$fzf_base"/lib && cd "$fzf_base"/lib
   if [ $? -ne 0 ]; then
-    binary_error="Failed to create bin directory"
+    binary_error="Failed to create lib directory"
     return
   fi
 
   local url
-  url=https://github.com/junegunn/fzf/releases/download/$version/${1}
+  url=https://github.com/junegunn/fzf/releases/download/$version/$file_to_download
   set -o pipefail
   if ! (try_curl $url || try_wget $url); then
     set +o pipefail
@@ -155,146 +124,38 @@ download() {
   fi
   set +o pipefail
 
-  if [ ! -f fzf ]; then
-    binary_error="Failed to download ${1}"
+  if [ ! -f $file_to_download ]; then
+    binary_error="Failed to download $file_to_download"
     return
   fi
-
-  chmod +x fzf && check_binary
 }
 
-# Try to download binary executable
-archi=$(uname -sm)
-binary_available=1
-binary_error=""
-case "$archi" in
-  Darwin\ *64)     download fzf-$version-darwin_amd64.tar.gz  ;;
-  Linux\ armv5*)   download fzf-$version-linux_armv5.tar.gz   ;;
-  Linux\ armv6*)   download fzf-$version-linux_armv6.tar.gz   ;;
-  Linux\ armv7*)   download fzf-$version-linux_armv7.tar.gz   ;;
-  Linux\ armv8*)   download fzf-$version-linux_arm64.tar.gz   ;;
-  Linux\ aarch64*) download fzf-$version-linux_arm64.tar.gz   ;;
-  Linux\ *64)      download fzf-$version-linux_amd64.tar.gz   ;;
-  FreeBSD\ *64)    download fzf-$version-freebsd_amd64.tar.gz ;;
-  OpenBSD\ *64)    download fzf-$version-openbsd_amd64.tar.gz ;;
-  CYGWIN*\ *64)    download fzf-$version-windows_amd64.zip    ;;
-  MINGW*\ *64)     download fzf-$version-windows_amd64.zip    ;;
-  MSYS*\ *64)      download fzf-$version-windows_amd64.zip    ;;
-  Windows*\ *64)   download fzf-$version-windows_amd64.zip    ;;
-  *)               binary_available=0 binary_error=1 ;;
-esac
+update() {
+  echo "Updating sources to version $version"
+  download fzf-$version-darwin_amd64.tar.gz
+  download fzf-$version-linux_armv5.tar.gz
+  download fzf-$version-linux_armv6.tar.gz
+  download fzf-$version-linux_armv7.tar.gz
+  download fzf-$version-linux_arm64.tar.gz
+  download fzf-$version-freebsd_amd64.tar.gz
+  download fzf-$version-openbsd_amd64.tar.gz
+  download fzf-$version-windows_amd64.zip
+}
 
-cd "$fzf_base"
-if [ -n "$binary_error" ]; then
-  if [ $binary_available -eq 0 ]; then
-    echo "No prebuilt binary for $archi ..."
+
+# unzip file_to_unzip
+# Run in base dir. Looks for file in lib. Unzips to bin
+unzip() {
+  file_to_unzip="$1"
+  cd "$fzf_base"/lib 
+  if [[ $file_to_unzip =~ tar.gz$ ]]; then
+    tar -xzf $file_to_unzip -C "$fzf_base"/bin
   else
-    echo "  - $binary_error !!!"
-  fi
-  if command -v go > /dev/null; then
-    echo -n "Building binary (go get -u github.com/junegunn/fzf) ... "
-    if [ -z "${GOPATH-}" ]; then
-      export GOPATH="${TMPDIR:-/tmp}/fzf-gopath"
-      mkdir -p "$GOPATH"
-    fi
-    if go get -ldflags "-s -w -X main.version=$version -X main.revision=go-get" github.com/junegunn/fzf; then
-      echo "OK"
-      cp "$GOPATH/bin/fzf" "$fzf_base/bin/"
-    else
-      echo "Failed to build binary. Installation failed."
-      exit 1
-    fi
-  else
-    echo "go executable not found. Installation failed."
-    exit 1
-  fi
-fi
-
-[[ "$*" =~ "--bin" ]] && exit 0
-
-for s in $shells; do
-  if ! command -v "$s" > /dev/null; then
-    shells=${shells/$s/}
-  fi
-done
-
-if [[ ${#shells} -lt 3 ]]; then
-  echo "No shell configuration to be updated."
-  exit 0
-fi
-
-# Auto-completion
-if [ -z "$auto_completion" ]; then
-  ask "Do you want to enable fuzzy auto-completion?"
-  auto_completion=$?
-fi
-
-# Key-bindings
-if [ -z "$key_bindings" ]; then
-  ask "Do you want to enable key bindings?"
-  key_bindings=$?
-fi
-
-echo
-for shell in $shells; do
-  [[ "$shell" = fish ]] && continue
-  src=${prefix_expand}.${shell}
-  echo -n "Generate $src ... "
-
-  fzf_completion="[[ \$- == *i* ]] && source \"$fzf_base/shell/completion.${shell}\" 2> /dev/null"
-  if [ $auto_completion -eq 0 ]; then
-    fzf_completion="# $fzf_completion"
+    unzip $file_to_unzip -d "$fzf_base"/bin
   fi
 
-  fzf_key_bindings="source \"$fzf_base/shell/key-bindings.${shell}\""
-  if [ $key_bindings -eq 0 ]; then
-    fzf_key_bindings="# $fzf_key_bindings"
-  fi
-
-  cat > "$src" << EOF
-# Setup fzf
-# ---------
-if [[ ! "\$PATH" == *$fzf_base_esc/bin* ]]; then
-  export PATH="\${PATH:+\${PATH}:}$fzf_base/bin"
-fi
-
-# Auto-completion
-# ---------------
-$fzf_completion
-
-# Key bindings
-# ------------
-$fzf_key_bindings
-EOF
-  echo "OK"
-done
-
-# fish
-if [[ "$shells" =~ fish ]]; then
-  echo -n "Update fish_user_paths ... "
-  fish << EOF
-  echo \$fish_user_paths | \grep "$fzf_base"/bin > /dev/null
-  or set --universal fish_user_paths \$fish_user_paths "$fzf_base"/bin
-EOF
-  [ $? -eq 0 ] && echo "OK" || echo "Failed"
-
-  mkdir -p "${fish_dir}/functions"
-  if [ -e "${fish_dir}/functions/fzf.fish" ]; then
-    echo -n "Remove unnecessary ${fish_dir}/functions/fzf.fish ... "
-    rm -f "${fish_dir}/functions/fzf.fish" && echo "OK" || echo "Failed"
-  fi
-
-  fish_binding="${fish_dir}/functions/fzf_key_bindings.fish"
-  if [ $key_bindings -ne 0 ]; then
-    echo -n "Symlink $fish_binding ... "
-    ln -sf "$fzf_base/shell/key-bindings.fish" \
-           "$fish_binding" && echo "OK" || echo "Failed"
-  else
-    echo -n "Removing $fish_binding ... "
-    rm -f "$fish_binding"
-    echo "OK"
-  fi
-fi
+  chmod +x $"fzf_base"/bin/fzf && check_binary
+}
 
 append_line() {
   set -e
@@ -341,41 +202,228 @@ create_file() {
   echo
 }
 
-if [ $update_config -eq 2 ]; then
-  echo
-  ask "Do you want to update your shell configuration files?"
-  update_config=$?
-fi
-echo
-for shell in $shells; do
-  [[ "$shell" = fish ]] && continue
-  [ $shell = zsh ] && dest=${ZDOTDIR:-~}/.zshrc || dest=~/.bashrc
-  append_line $update_config "[ -f ${prefix}.${shell} ] && source ${prefix}.${shell}" "$dest" "${prefix}.${shell}"
-done
 
-if [ $key_bindings -eq 1 ] && [[ "$shells" =~ fish ]]; then
-  bind_file="${fish_dir}/functions/fish_user_key_bindings.fish"
-  if [ ! -e "$bind_file" ]; then
-    create_file "$bind_file" \
-      'function fish_user_key_bindings' \
-      '  fzf_key_bindings' \
-      'end'
-  else
-    append_line $update_config "fzf_key_bindings" "$bind_file"
+main() {
+  # Try to download binary executable
+  archi=$(uname -sm)
+  binary_available=1
+  binary_error=""
+  case "$archi" in
+    Darwin\ *64)     unzip fzf-$version-darwin_amd64.tar.gz  ;;
+    Linux\ armv5*)   unzip fzf-$version-linux_armv5.tar.gz   ;;
+    Linux\ armv6*)   unzip fzf-$version-linux_armv6.tar.gz   ;;
+    Linux\ armv7*)   unzip fzf-$version-linux_armv7.tar.gz   ;;
+    Linux\ armv8*)   unzip fzf-$version-linux_arm64.tar.gz   ;;
+    Linux\ aarch64*) unzip fzf-$version-linux_arm64.tar.gz   ;;
+    Linux\ *64)      unzip fzf-$version-linux_amd64.tar.gz   ;;
+    FreeBSD\ *64)    unzip fzf-$version-freebsd_amd64.tar.gz ;;
+    OpenBSD\ *64)    unzip fzf-$version-openbsd_amd64.tar.gz ;;
+    CYGWIN*\ *64)    unzip fzf-$version-windows_amd64.zip    ;;
+    MINGW*\ *64)     unzip fzf-$version-windows_amd64.zip    ;;
+    MSYS*\ *64)      unzip fzf-$version-windows_amd64.zip    ;;
+    Windows*\ *64)   unzip fzf-$version-windows_amd64.zip    ;;
+    *)               binary_available=0 binary_error=1 ;;
+  esac
+
+  cd "$fzf_base"
+  if [ -n "$binary_error" ]; then
+    if [ $binary_available -eq 0 ]; then
+      echo "No prebuilt binary for $archi ..."
+    else
+      echo "  - $binary_error !!!"
+    fi
+    if command -v go > /dev/null; then
+      echo -n "Building binary (go get -u github.com/junegunn/fzf) ... "
+      if [ -z "${GOPATH-}" ]; then
+        export GOPATH="${TMPDIR:-/tmp}/fzf-gopath"
+        mkdir -p "$GOPATH"
+      fi
+      if go get -ldflags "-s -w -X main.version=$version -X main.revision=go-get" github.com/junegunn/fzf; then
+        echo "OK"
+        cp "$GOPATH/bin/fzf" "$fzf_base/bin/"
+      else
+        echo "Failed to build binary. Installation failed."
+        exit 1
+      fi
+    else
+      echo "go executable not found. Installation failed."
+      exit 1
+    fi
   fi
+
+  [[ "$*" =~ "--bin" ]] && exit 0
+
+  for s in $shells; do
+    if ! command -v "$s" > /dev/null; then
+      shells=${shells/$s/}
+    fi
+  done
+
+  if [[ ${#shells} -lt 3 ]]; then
+    echo "No shell configuration to be updated."
+    exit 0
+  fi
+
+  # Auto-completion
+  if [ -z "$auto_completion" ]; then
+    ask "Do you want to enable fuzzy auto-completion?"
+    auto_completion=$?
+  fi
+
+  # Key-bindings
+  if [ -z "$key_bindings" ]; then
+    ask "Do you want to enable key bindings?"
+    key_bindings=$?
+  fi
+
+  echo
+  for shell in $shells; do
+    [[ "$shell" = fish ]] && continue
+    src=${prefix_expand}.${shell}
+    echo -n "Generate $src ... "
+
+    fzf_completion="[[ \$- == *i* ]] && source \"$fzf_base/shell/completion.${shell}\" 2> /dev/null"
+    if [ $auto_completion -eq 0 ]; then
+      fzf_completion="# $fzf_completion"
+    fi
+
+    fzf_key_bindings="source \"$fzf_base/shell/key-bindings.${shell}\""
+    if [ $key_bindings -eq 0 ]; then
+      fzf_key_bindings="# $fzf_key_bindings"
+    fi
+
+    cat > "$src" << EOF
+# Setup fzf
+# ---------
+if [[ ! "\$PATH" == *$fzf_base_esc/bin* ]]; then
+  export PATH="\${PATH:+\${PATH}:}$fzf_base/bin"
 fi
 
-if [ $update_config -eq 1 ]; then
-  echo 'Finished. Restart your shell or reload config file.'
-  if [[ "$shells" =~ bash ]]; then
-    echo -n '   source ~/.bashrc  # bash'
-    [[ "$archi" =~ Darwin ]] && echo -n '  (.bashrc should be loaded from .bash_profile)'
+# Auto-completion
+# ---------------
+$fzf_completion
+
+# Key bindings
+# ------------
+$fzf_key_bindings
+EOF
+    echo "OK"
+  done
+
+  # fish
+  if [[ "$shells" =~ fish ]]; then
+    echo -n "Update fish_user_paths ... "
+    fish << EOF
+  echo \$fish_user_paths | \grep "$fzf_base"/bin > /dev/null
+  or set --universal fish_user_paths \$fish_user_paths "$fzf_base"/bin
+EOF
+    [ $? -eq 0 ] && echo "OK" || echo "Failed"
+
+    mkdir -p "${fish_dir}/functions"
+    if [ -e "${fish_dir}/functions/fzf.fish" ]; then
+      echo -n "Remove unnecessary ${fish_dir}/functions/fzf.fish ... "
+      rm -f "${fish_dir}/functions/fzf.fish" && echo "OK" || echo "Failed"
+    fi
+
+    fish_binding="${fish_dir}/functions/fzf_key_bindings.fish"
+    if [ $key_bindings -ne 0 ]; then
+      echo -n "Symlink $fish_binding ... "
+      ln -sf "$fzf_base/shell/key-bindings.fish" \
+             "$fish_binding" && echo "OK" || echo "Failed"
+    else
+      echo -n "Removing $fish_binding ... "
+      rm -f "$fish_binding"
+      echo "OK"
+    fi
+  fi
+
+  if [ $update_config -eq 2 ]; then
+    echo
+    ask "Do you want to update your shell configuration files?"
+    update_config=$?
+  fi
+  echo
+  for shell in $shells; do
+    [[ "$shell" = fish ]] && continue
+    [ $shell = zsh ] && dest=${ZDOTDIR:-~}/.zshrc || dest=~/.bashrc
+    append_line $update_config "[ -f ${prefix}.${shell} ] && source ${prefix}.${shell}" "$dest" "${prefix}.${shell}"
+  done
+
+  if [ $key_bindings -eq 1 ] && [[ "$shells" =~ fish ]]; then
+    bind_file="${fish_dir}/functions/fish_user_key_bindings.fish"
+    if [ ! -e "$bind_file" ]; then
+      create_file "$bind_file" \
+        'function fish_user_key_bindings' \
+        '  fzf_key_bindings' \
+        'end'
+    else
+      append_line $update_config "fzf_key_bindings" "$bind_file"
+    fi
+  fi
+
+  if [ $update_config -eq 1 ]; then
+    echo 'Finished. Restart your shell or reload config file.'
+    if [[ "$shells" =~ bash ]]; then
+      echo -n '   source ~/.bashrc  # bash'
+      [[ "$archi" =~ Darwin ]] && echo -n '  (.bashrc should be loaded from .bash_profile)'
+      echo
+    fi
+    [[ "$shells" =~ zsh ]]  && echo "   source ${ZDOTDIR:-~}/.zshrc   # zsh"
+    [[ "$shells" =~ fish ]] && [ $key_bindings -eq 1 ] && echo '   fzf_key_bindings  # fish'
+    echo
+    echo 'Use uninstall script to remove fzf.'
     echo
   fi
-  [[ "$shells" =~ zsh ]]  && echo "   source ${ZDOTDIR:-~}/.zshrc   # zsh"
-  [[ "$shells" =~ fish ]] && [ $key_bindings -eq 1 ] && echo '   fzf_key_bindings  # fish'
-  echo
-  echo 'Use uninstall script to remove fzf.'
-  echo
+  echo 'For more information, see: https://github.com/junegunn/fzf'
+}
+
+
+while [[ $# -gt 0 ]]; do
+  opt="$1"
+  case $opt in
+    --help)
+      help
+      exit 0
+      ;;
+    --version)
+      # TODO verify that another argument follows
+      shift # past version flag
+      version=$1
+      echo "Version is $version"
+      update
+      shift # past argument
+      ;;
+    --all)
+      auto_completion=1
+      key_bindings=1
+      update_config=1
+      shift # past argument
+      ;;
+    --xdg)
+      prefix='"${XDG_CONFIG_HOME:-$HOME/.config}"/fzf/fzf'
+      prefix_expand=${XDG_CONFIG_HOME:-$HOME/.config}/fzf/fzf
+      mkdir -p "${XDG_CONFIG_HOME:-$HOME/.config}/fzf"
+      shift # past argument
+      ;;
+    --key-bindings)    key_bindings=1    ; shift ;;
+    --no-key-bindings) key_bindings=0    ; shift ;;
+    --completion)      auto_completion=1 ; shift ;;
+    --no-completion)   auto_completion=0 ; shift ;;
+    --update-rc)       update_config=1   ; shift ;;
+    --no-update-rc)    update_config=0   ; shift ;;
+    --bin)             shift ;;
+    --no-bash)         shells=${shells/bash/} ; shift ;;
+    --no-zsh)          shells=${shells/zsh/} ; shift ;;
+    --no-fish)         shells=${shells/fish/} ; shift ;;
+    *)
+      echo "unknown option: $opt"
+      help
+      exit 1
+      ;;
+  esac
+done
+
+
+if [[ "${BASH_SOURCE[0]}" == "${0}" ]]; then
+    main "$@"
 fi
-echo 'For more information, see: https://github.com/junegunn/fzf'
